--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,4 @@ resolver = "2"
 
 members = [
     "hdl"
-, "hdl-macro", "hdl-macro-test", "project"]
+, "hdl-macro", "hdl-macro-test", "project", "ui"]
